(jpfouch48) Added a unique ItemIndex to the MetaData structure and directorydata structure to make the
			browsable playlist integration a little bit easier
(raf) Some more work on the OGG decoder.
(raf) Now TextUI will display selectable lists for playlist and playlist entries
(raf) Made the current selections more dynamic so they follow the list.

0.36-pre1 (r336)
------------------------------------------------------------------------
r320 | rafpsp | 2005-10-17 02:19:15 -0400 (Mon, 17 Oct 2005) | 38 lines

svn merge -r305:319 branches/OGGSupportAddition to trunk/
	----------------------------------------------------------------------
	r319 | rafpsp | 2005-10-17 01:52:33 -0400 (Mon, 17 Oct 2005) | 1 line
	
	Now if content type is not defined, it defaults to MPEG. Also added case for AAC (not supported yet)
	------------------------------------------------------------------------
	r318 | rafpsp | 2005-10-17 01:51:34 -0400 (Mon, 17 Oct 2005) | 1 line
	
	Added support for determining content types for ogg and aac.
	------------------------------------------------------------------------
	r317 | rafpsp | 2005-10-17 01:51:05 -0400 (Mon, 17 Oct 2005) | 1 line
	
	Added support for determining content types for ogg and aac.
	------------------------------------------------------------------------
	r316 | rafpsp | 2005-10-17 00:50:34 -0400 (Mon, 17 Oct 2005) | 2 lines
	
	Added support for different stream types in preparation for addition of new decoders. It detects the stream type (content type) from filename if local file, or
	from content-type: metadata from online stream response. (Some servers don't send the response.. so may want to default to MAD.
	------------------------------------------------------------------------
	r315 | rafpsp | 2005-10-16 04:07:39 -0400 (Sun, 16 Oct 2005) | 1 line
	
	More modularization in progress...
	------------------------------------------------------------------------